[FIX] web: adapt property field type selector style and z-index
The field type dropdown inside the property field popover style was broken
due to a dropdown refacor (https://github.com/odoo/odoo/pull/137691).

A menuClass has been added to target the dropdown content and adapt the style.

closes odoo/enterprise#57696

Related: odoo/odoo#153068

--- a/web_enterprise/static/src/views/fields/properties/properties_field.dark.scss
+++ b/web_enterprise/static/src/views/fields/properties/properties_field.dark.scss
@@ -1,4 +1,4 @@
-.o_field_property_definition_type {
+.o_field_property_definition_type, .o_field_property_definition_type_menu {
     .o_field_property_dropdown > img {
         -webkit-filter: invert(100%);
         filter: invert(100%);
