--- a/web_studio/static/src/client_action/report_editor/report_editor_wysiwyg/report_editor_wysiwyg.scss
+++ b/web_studio/static/src/client_action/report_editor/report_editor_wysiwyg/report_editor_wysiwyg.scss
@@ -7,6 +7,9 @@ body.o_in_studio .o-overlay-container {
             bottom: unset;
         }
     }
+    .o-overlay-item:has(.o_we_crop_widget) {
+        position: static;
+    }
 }
 
 .o-web-studio-report-editor-wysiwyg .odoo-editor-editable {
